добавлены вьюхи регистрации и авторизации(доделать надо), сделаны через шаблонизатор fest, добавлена методология БЭМ, добавлены классы block, views, models для дальнейшего расширения компонентов, вьюх

--- a/public/components/button/button.css
+++ b/public/components/button/button.css
@@ -1,4 +1,4 @@
-.button {
+.formLogin__js-controls__SignIn {
 	background-color: #4dca62;
     border: .1rem solid #4dca62;
     border-radius: .4rem;
