--- a/public/components/form/form.tmpl.xml
+++ b/public/components/form/form.tmpl.xml
@@ -6,7 +6,7 @@
 		<h1>
 			<fest:value>data.title</fest:value>
 		</h1>
-		<div class="{data.class}__js-inputs"></div>
-		<div class="{data.class}__js-controls"></div>
+		<div class="{data.class}_inputs"></div>
+		<div class="{data.class}_controls"></div>
 	</form>
 </fest:template>
